--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "engines": {
-    "node": ">= 7.6.0"
+    "node": "8.9.0",
+    "npm": "5.3.0"
   },
   "main": "index.js",
   "scripts": {
