deploy on heroku

--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "npm run migrate && node ./node_modules/.bin/pm2 start build/index.js -i max --attach",
+    "start": "node ./node_modules/.bin/pm2 start build/index.js -i max --attach",
     "start:dev": "npx nodemon index-dev.js",
     "build": "npx babel src --out-dir build",
     "lint": "npx eslint -c .eslintrc src",
     "test": "npm run lint && npx jest",
     "migrate": "npx knex migrate:latest",
     "migrate-down": "npx knex migrate:rollback",
-    "prettify": "npx prettier --single-quote --trailing-comma none --write \"src/**/*.js\""
+    "prettify": "npx prettier --single-quote --trailing-comma none --write \"src/**/*.js\"",
+    "postinstall": "npm run build && npm run migrate"
   },
   "author": "Vitaliy Kolodeev",
   "license": "ISC",
