--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "node ./node_modules/.bin/pm2 start build/index.js -i max --attach",
     "start:dev": "npx nodemon index-dev.js",
-    "build": "npx babel src --out-dir build",
+    "build": "./node_modules/.bin/babel src --out-dir build",
     "lint": "npx eslint -c .eslintrc src",
     "test": "npm run lint && npx jest",
     "migrate": "npx knex migrate:latest",
