--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "time-logger-api",
   "version": "0.0.1",
-  "description": "todo api app",
+  "name": "time-logger-api",
+  "description": "Todo List REST API Application",
+  "author": "Vitalii Kolodieiev <uchihaveha@gmail.com> (https://github.com/UchihaVeha)",
+  "homepage": "https://github.com/UchihaVeha/todo-api-app",
   "repository": {
     "type": "git",
     "url": "https://github.com/UchihaVeha/todo-api-app.git"
   },
+  "license": "MIT",
   "engines": {
     "node": "8.9.0",
     "npm": "5.5.1"
@@ -23,8 +26,6 @@
     "migrate-down": "npx knex migrate:rollback",
     "prettify": "npx prettier --single-quote --trailing-comma none --write \"src/**/*.js\""
   },
-  "author": "Vitaliy Kolodeev",
-  "license": "ISC",
   "dependencies": {
     "Validator": "^1.0.5",
     "bcryptjs": "^2.4.3",
